--- a/mobile/ios/src/app/app.html
+++ b/mobile/ios/src/app/app.html
@@ -5,7 +5,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content class="side-menu">
+  <ion-content class="sidemenu-hoteling">
     <ion-list >
       <ion-item color="menu-left" *ngFor="let act of activities" (click)="openSubmenu(act)">
         {{act.title}}
