--- a/mobile/ios/src/theme/variables.scss
+++ b/mobile/ios/src/theme/variables.scss
@@ -12,7 +12,10 @@ $font-path: "../assets/fonts";
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-
+@import "../styleRef/hotelingIcons";
+@import "../styleRef/localVariables";
+@import "../styleRef/pwcBranding";
+@import "../styleRef/stylLib";
 
 
 // Named Color Variables
@@ -24,14 +27,14 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary: #387ef5,
+  primary:#fff,
   secondary: #32db64,
   danger: #f53d3d,
   light: #f4f4f4,
   dark: #222,
   menu-left: #fff,
-  navbar-header: #fff,
-  menu-left-header: #fff
+  navbar-header: $pwcOrange,
+  menu-left-header: $pwcOrange
 );
 
 
